test/tests/compiler/16_characters_and_strings/invalid_types/extra_credit/case_statement_string.plx
# Can't use strings as labels for case statements
pub fn main(none) i32 {
    match 0 {
        -> "foo" {
            return 1
        }
        otherwise {
            return 0
        }
    }
}
